Ajustes de configurações sobre base de dados.

--- a/app/config/communication.ini
+++ b/app/config/communication.ini
@@ -1,7 +1,7 @@
-host = localhost
-port = 5432
-name = projeto1
-user = projeto1
-pass = projeto1
-type = pgsql
-prep = 1
+host   = 
+port   = 
+name   = app/database/communication.db
+user   = 
+pass   = 
+type   = sqlite
+prep   = "1"
