--- a/app/config/log.ini
+++ b/app/config/log.ini
@@ -1,7 +1,7 @@
 host = localhost
-port = 5432
-name = projeto1_log
-user = projeto1
-pass = projeto1
-type = pgsql
+port = 3306
+name = siuel_log
+user = bruno
+pass = bruno16
+type = mysql
 prep = 1
