Ajustes nas configurações da aplicação.

--- a/app/config/application.ini
+++ b/app/config/application.ini
@@ -2,7 +2,7 @@
 timezone = America/Sao_Paulo
 language = pt
 application = template
-title = "SENAI RN"
+title = "G. E. São Sebastião"
 theme = theme3
 seed = 
 rest_key = 
@@ -13,7 +13,7 @@ lang_options[pt] = Português
 lang_options[en] = English
 lang_options[es] = Español
 multi_database = "0"
-;notification_login=1
+notification_login=1
 ;require_terms = "1"
 ;use_tabs=1
 ;store_tabs=1
